<resources>
    <string name="app_name">ProjetoExemploMD</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_login">Login</string>
    <string name="menu_info">Informações</string>
    <string name="menu_add">Cadastrar Produtos</string>
    <string name="menu_list">Listar Produtos</string>

    <string name="btnlogin">Logar</string>
    <string name="txtAdicionar">Cadastrar Produtos</string>
    <string name="txtListar">Listar Produtos</string>
    <string name="nome">Nome</string>
    <string name="dtnasc">DtNasc</string>
    <string name="endereco">Endereço</string>
    <string name="hometext">App Exemplo Android - Material Design e Firebase CRUD</string>
    <string name="btnCad">Cadastrar</string>
    <string name="btnEdit">Editar</string>
    <string name="btnDel">Excluir</string>
</resources>
