<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical">
        <TextView
            android:id="@+id/textViewNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/nome"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/textViewDtNasc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dtnasc" />
        <TextView
            android:id="@+id/textViewEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/endereco" />

</androidx.appcompat.widget.LinearLayoutCompat>